fix hour spacing

--- a/style/style.css
+++ b/style/style.css
@@ -44,12 +44,16 @@ body {
  flex-direction: row;
  justify-content: center;
 }
+.hour :nth-child(-n+3)  {
+  margin-right: .3em;
+}
 .hour div {font-size: 5em;}
 .search {
   display:flex;
   flex-direction: row;
   justify-content: center;
 }
+.search {font-size: 4em;}
 .historic {
   display: flex;
 }
